# cpp-base

./: .gitignore  CMakeLists.txt  README.md
images/: cmake-tools-run-tests.png~
src/: hello.hpp  main.cpp
src/core/atomic/: Resource.cpp  Resource.h
src/hello/: hello.hpp
test/: CMakeLists.txt
test/hello/: hello-test.cpp
